--- a/socreport.bib
+++ b/socreport.bib
@@ -692,6 +692,20 @@
   month           = {-},
 }
 
+@article{baras07_reinf_learn_spike_time_depen,
+  author          = {Dorit Baras and Ron Meir},
+  title           = {Reinforcement Learning, Spike-Time-Dependent Plasticity,
+                  and the Bcm Rule},
+  journal         = {Neural Computation},
+  volume          = 19,
+  number          = 8,
+  pages           = {2245-2279},
+  year            = 2007,
+  doi             = {10.1162/neco.2007.19.8.2245},
+  url             = {https://doi.org/10.1162/neco.2007.19.8.2245},
+  DATE_ADDED      = {Tue Apr 7 14:02:48 2020},
+}
+
 @article{blouw18_bench_keywor_spott_effic_neurom_hardw,
   author          = {Blouw, Peter and Choo, Xuan and Hunsberger, Eric and
                   Eliasmith, Chris},
@@ -1306,6 +1320,15 @@
   organization    = {Springer}
 }
 
+@inproceedings{miconi2018backpropamine,
+  title           = {Backpropamine: Meta-Training Self-Modifying Neural Networks
+                  with Gradient Descent},
+  author          = {Miconi, Thomas and Rawal, Aditya and Clune, Jeff and
+                  Stanley, Kenneth O},
+  booktitle       = {Workshop on Neural Information Processing Systems},
+  year            = 2018
+}
+
 @article{mnih2013playing,
   title           = {Playing atari with deep reinforcement learning},
   author          = {Mnih, Volodymyr and Kavukcuoglu, Koray and Silver, David
@@ -1443,6 +1466,20 @@
                   Equilibrium propagation.}
 }
 
+@article{potjans09_spikin_neural_networ_model_actor,
+  author          = {Wiebke Potjans and Abigail Morrison and Markus Diesmann},
+  title           = {A Spiking Neural Network Model of an Actor-Critic Learning
+                  Agent},
+  journal         = {Neural Computation},
+  volume          = 21,
+  number          = 2,
+  pages           = {301-339},
+  year            = 2009,
+  doi             = {10.1162/neco.2008.08-07-593},
+  url             = {https://doi.org/10.1162/neco.2008.08-07-593},
+  DATE_ADDED      = {Tue Apr 7 13:59:13 2020},
+}
+
 @inproceedings{reinecke2014experimental,
   title           = {Experimental comparison of slip detection strategies by
                   tactile sensing with the BioTac{\textregistered} on the DLR
@@ -1575,6 +1612,18 @@
   DATE_ADDED      = {Sat Nov 2 19:32:20 2019},
 }
 
+@techreport{Gallego2018,
+Archiveprefix = {arXiv},
+Arxivid = {arXiv:1904.08405v1},
+Author = {Gallego, Guillermo and Delbr, Tobi and Orchard, Garrick and Bartolozzi, Chiara and Taba, Brian and Censi, Andrea and Daniilidis, Kostas and Scaramuzza, Davide and Leutenegger, Stefan and Davison, Andrew},
+Date-Added = {2020-01-30 15:56:57 +0800},
+Date-Modified = {2020-01-30 15:56:57 +0800},
+Eprint = {arXiv:1904.08405v1},
+Pages = {1--25},
+Title = {{Event-based Vision : A Survey}},
+Year = {2018}
+}
+
 @inproceedings{su2015force,
   title           = {Force estimation and slip detection/classification for grip
                   control using a biomimetic tactile sensor},
@@ -1645,18 +1694,6 @@
   year            = 2018,
 }
 
-@techreport{Gallego2018,
-Archiveprefix = {arXiv},
-Arxivid = {arXiv:1904.08405v1},
-Author = {Gallego, Guillermo and Delbr, Tobi and Orchard, Garrick and Bartolozzi, Chiara and Taba, Brian and Censi, Andrea and Daniilidis, Kostas and Scaramuzza, Davide and Leutenegger, Stefan and Davison, Andrew},
-Date-Added = {2020-01-30 15:56:57 +0800},
-Date-Modified = {2020-01-30 15:56:57 +0800},
-Eprint = {arXiv:1904.08405v1},
-Pages = {1--25},
-Title = {{Event-based Vision : A Survey}},
-Year = {2018}
-}
-
 @article{teka14_neuron_spike_timin_adapt_descr,
   author          = {Wondimu Teka and Toma M. Marinov and Fidel Santamaria},
   title           = {Neuronal Spike Timing Adaptation Described With a
@@ -1724,6 +1761,13 @@ Year = {2018}
   doi             = {10.1016/j.conb.2005.08.002},
   url             = {https://doi.org/10.1016/j.conb.2005.08.002},
   DATE_ADDED      = {Mon Mar 23 21:36:50 2020},
+}
+
+@phdthesis{schulman2016optimizing,
+  title={Optimizing expectations: From deep reinforcement learning to stochastic computation graphs},
+  author={Schulman, John},
+  year={2016},
+  school={UC Berkeley}
 }
 
 @article{ycb2015,
@@ -1802,13 +1846,6 @@ Year = {2018}
   archivePrefix   = {arXiv},
   eprint          = {1609.02053v1},
   primaryClass    = {cs.NE},
-}
-
-@phdthesis{schulman2016optimizing,
-  title={Optimizing expectations: From deep reinforcement learning to stochastic computation graphs},
-  author={Schulman, John},
-  year={2016},
-  school={UC Berkeley}
 }
 
 @article{zenke17_super,
